--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
 <p>本站部分内容转载于网络，有出处的已在文中署名作者并附加原文链接，出处已不可寻的皆已标注来源于网络。若您认为本博客有部分内容侵犯了您的权益，请在评论区留言或电邮告知，我将认真处理。</p>
 <h3><strong>支持我</strong></h3><p>本博客为个人站点，无任何商业广告，若您想对我进行经济上的支持，请在下方选择付款方式，捐助所得资金将用于服务器/域名续费，我将对您表示感谢：)</p>
 <p class="donate-qrcode">
-<img style="width: 25%;left: 25%;margin-right: 5px;display: inline;position: relative;" src="https://cdn.imjad.cn/usr/themes/Moricolor/img/alipay.jpg" alt="支付宝" title="支付宝"><img style="width: 25%;left: 25%;display: inline;position: relative;"src="https://cdn.imjad.cn/usr/themes/Moricolor/img/wechatpay.jpg" alt="微信支付" title="微信支付">
+<img style="width: 25%;left: 25%;margin-right: 5px;display: inline;position: relative;" src="https://cdn.jsdelivr.net/gh/journey-ad/blog-img/about/alipay.jpg" alt="支付宝" title="支付宝"><img style="width: 25%;left: 25%;display: inline;position: relative;"src="https://cdn.jsdelivr.net/gh/journey-ad/blog-img/about/wechatpay.jpg" alt="微信支付" title="微信支付">
 </p>
 
 <script>
