deploy: cc6ab9565cf80586675f1c33f1890fabdc274a18

--- a/about/index.html
+++ b/about/index.html
@@ -62,8 +62,8 @@
 </blockquote>
 
     <div class="cplayer-template"
-      id="cplayer-20574237"
-      data-id="cplayer-20574237"
+      id="cplayer-23531996"
+      data-id="cplayer-23531996"
       data-playlist=%5B%7B%22name%22%3A%22loading...%22%2C%22artist%22%3A%22loading...%22%7D%5D
       data-ids=[405079779,1352292327,437250681,751472,425828206,1477670,478127,520459951,26220167,27548281]
       data-autoplay="false"
@@ -74,7 +74,7 @@
 
         let getLyric = id => {
           return new Promise((resolve, reject) => {
-            fetch("https://api.imjad.cn/cloudmusic/?type=lyric&id=" + id).then(res => {
+            fetch("https://hibiapi.getloli.com/api/netease/?type=lyric&id=" + id).then(res => {
               return res.json()
             }).then(data => {
               // console.log(data)
@@ -93,30 +93,41 @@
           })
         }
 
+        let getSrc = id => {
+          return new Promise((resolve, reject) => {
+            fetch("https://hibiapi.getloli.com/api/netease/?type=song&id=" + id).then(res => {
+              return res.json()
+            }).then(data => {
+              resolve(data.data[0].url);
+            })
+          })
+        }
+
         function loadcplayer() {
           if (typeof window.cplayerList === 'undefined') window.cplayerList = {};
-          if (typeof window.cplayerList["cplayer-20574237"] !== 'undefined') return;
+          if (typeof window.cplayerList["cplayer-23531996"] !== 'undefined') return;
           if (!cplayer.prototype.add163) cplayer.prototype.add163 = async function add163(id) {
             if (!id) throw new Error("Unable Property.");
             let lyric = await getLyric(id);
+            let src = await getSrc(id);
             // console.log(lyric)
 
-            return fetch("https://api.imjad.cn/cloudmusic/?type=detail&id=" + id).then(function(res){return res.json()}).then(function(data){
+            return fetch("https://hibiapi.getloli.com/api/netease/?type=detail&id=" + id).then(function(res){return res.json()}).then(function(data){
               let obj = {
                 name: data.songs[0].name,
                 artist: data.songs[0].ar.map(function(ar){ return ar.name }).join(','),
                 poster: data.songs[0].al.picUrl,
                 lyric: lyric.lyric,
                 sublyric: lyric.tlyric,
-                src: 'https://api.imjad.cn/cloudmusic/?type=song&raw=true&id=' + id
+                src: src
               }
               this.add(obj);
               return obj;
             }.bind(this))
           }
 
-          window.cplayerList["cplayer-20574237"] = new cplayer({
-            element: document.getElementById("cplayer-20574237"),
+          window.cplayerList["cplayer-23531996"] = new cplayer({
+            element: document.getElementById("cplayer-23531996"),
             playlist: [{"name":"loading...","artist":"loading..."}],
             generateBeforeElement: false,
             deleteElementAfterGenerate: false,
@@ -196,9 +207,9 @@
                     `
           });
 
-          window.cplayerList["cplayer-20574237"].add163(405079779),window.cplayerList["cplayer-20574237"].add163(1352292327),window.cplayerList["cplayer-20574237"].add163(437250681),window.cplayerList["cplayer-20574237"].add163(751472),window.cplayerList["cplayer-20574237"].add163(425828206),window.cplayerList["cplayer-20574237"].add163(1477670),window.cplayerList["cplayer-20574237"].add163(478127),window.cplayerList["cplayer-20574237"].add163(520459951),window.cplayerList["cplayer-20574237"].add163(26220167),window.cplayerList["cplayer-20574237"].add163(27548281)
+          window.cplayerList["cplayer-23531996"].add163(405079779),window.cplayerList["cplayer-23531996"].add163(1352292327),window.cplayerList["cplayer-23531996"].add163(437250681),window.cplayerList["cplayer-23531996"].add163(751472),window.cplayerList["cplayer-23531996"].add163(425828206),window.cplayerList["cplayer-23531996"].add163(1477670),window.cplayerList["cplayer-23531996"].add163(478127),window.cplayerList["cplayer-23531996"].add163(520459951),window.cplayerList["cplayer-23531996"].add163(26220167),window.cplayerList["cplayer-23531996"].add163(27548281)
 
-          let player = window.cplayerList["cplayer-20574237"]
+          let player = window.cplayerList["cplayer-23531996"]
           player.to(1)
           player.remove(player.playlist[0])
         }
